--- a/index.html
+++ b/index.html
@@ -115,20 +115,20 @@
             <h3>Diah Ramayanti</h3>
             <p>Putra dari Bpk. Mulyadi <br> & <br> Ibu Halima</p>
           </div>
-          <div class="col-4 couple">
-            <img src="img/images.png" alt="Diah Ramayanti" class="img-responsive rounded-circle">
+          <div class="col-4">
+            <img src="img/images.png" alt="HalriAnsyar" class="img-responsive rounded-circle">
           </div>
         </div>
       </div>
       
-      <div class="col-lg-6 couple">
+      <div class="col-lg-6">
         <div class="row">
           <div class="col-4">
-            <img src="img/images.png" alt="Halriansyar" class="img-responsive rounded-circle">
+            <img src="img/images.png" alt="Diah Ramayanti" class="img-responsive rounded-circle">
           </div>
           <div class="col-8">
-            <h3>Halriansyar</h3>
-            <p>Putra dari Bpk. Muhammad Ali <br> & <br> Ibu. Haspah</p>
+            <h3>HalriAnsyar</h3>
+            <p>Putra dari Bpk. Muhammad Ali <br> & <br> Ibu Haspah</p>
           </div>
         </div>
       </div>
