--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="col-lg-6">
         <div class="row">
           <div class="col-8 text-end">
-            <h3>Diah Ramayanti</h3>
+            <h3>Diah Ramayanti, S.Pd</h3>
             <p>Putra dari Bpk. Mulyadi <br> & <br> Ibu Halima</p>
           </div>
           <div class="col-4">
@@ -127,7 +127,7 @@
             <img src="img/images.png" alt="Diah Ramayanti" class="img-responsive rounded-circle">
           </div>
           <div class="col-8">
-            <h3>HalriAnsyar</h3>
+            <h3>Halriansyar. M.A</h3>
             <p>Putra dari Bpk. Muhammad Ali <br> & <br> Ibu Haspah</p>
           </div>
         </div>
