--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     
     <div class="row couple">
-      <div class="col-lg-6">
+      <div class="col-lg-6" style="margin-top: -2rem;">
         <div class="row">
           <div class="col-8 text-end">
             <h3>Diah Ramayanti, S.Pd</h3>
