--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
     </nav>
 
-    <nav class="navbar navbar-expand bg-transparent sticky-top mynavbar1" style="z-index: 0;">
+    <nav class="navbar navbar-expand bg-transparent sticky-top mynavbar1">
       <div class="set sticky-top">
         <div><img src="img/daun1.png"></div>
         <div><img src="img/daun2.png"></div>
@@ -98,6 +98,8 @@
     </nav>
 
 <section id="home" class="home">
+  <img src="img/1 (2).png" alt="logo" class="goyang">
+  <img src="img/1.png" alt="logo" class="goyang1">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 text-center">
@@ -109,14 +111,15 @@
     </div>
     
     <div class="row couple">
-      <div class="col-lg-6" style="margin-top: -2rem;">
+      <div class="col-lg-6">
         <div class="row">
           <div class="col-8 text-end">
             <h3>Diah Ramayanti, S.Pd</h3>
-            <p>Putra dari Bpk. Mulyadi <br> & <br> Ibu Halima</p>
+            <p style="margin-top: -30px;">Putra dari Bpk. Mulyadi <br> & <br> Ibu Halima</p>
+            <p href="https://www.instagram.com/diaaraa__/" target="_blank" class="btn">@diaara__</p>
           </div>
           <div class="col-4">
-            <img src="img/images.png" alt="HalriAnsyar" class="img-responsive rounded-circle">
+            <img src="img/symphony1.png" alt="HalriAnsyar" class="img-responsive rounded-circle">
           </div>
         </div>
       </div>
@@ -128,7 +131,8 @@
           </div>
           <div class="col-8">
             <h3>Halriansyar. M.A</h3>
-            <p>Putra dari Bpk. Muhammad Ali <br> & <br> Ibu Haspah</p>
+            <p style="margin-top: -30px;">Putra dari Bpk. Muhammad Ali <br> & <br> Ibu Haspah</p>
+            <p href="https://www.instagram.com/harliansyar_/" target="_blank" class="btn">@harliansyar_</p>
           </div>
         </div>
       </div>
