--- a/index.html
+++ b/index.html
@@ -98,8 +98,13 @@
     </nav>
 
 <section id="home" class="home">
+  <img src="img/2-1.png" alt="logo" class="goyang3">
+  <img src="img/2.png" alt="logo" class="goyang1">
+  <img src="img/01.png" alt="logo" class="goyang4">
   <img src="img/1 (2).png" alt="logo" class="goyang">
+  <img src="img/0.png" alt="logo" class="goyang2">
   <img src="img/1.png" alt="logo" class="goyang1">
+  <img src="img/2-2.png" alt="logo" class="goyang5">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 text-center">
