--- a/index.html
+++ b/index.html
@@ -98,13 +98,21 @@
     </nav>
 
 <section id="home" class="home">
-  <img src="img/2-1.png" alt="logo" class="goyang3">
   <img src="img/2.png" alt="logo" class="goyang1">
+  <img src="img/2-1.png" alt="logo" class="goyang3">
   <img src="img/01.png" alt="logo" class="goyang4">
-  <img src="img/1 (2).png" alt="logo" class="goyang">
-  <img src="img/0.png" alt="logo" class="goyang2">
   <img src="img/1.png" alt="logo" class="goyang1">
+  <img src="img/1 (2).png" alt="logo" class="goyang">
   <img src="img/2-2.png" alt="logo" class="goyang5">
+  <img src="img/0.png" alt="logo" class="goyang2">
+  
+  <img src="img/2-2 - Salin.png" alt="logo" class="yang5">
+  <img src="img/2 - Salin.png" alt="logo" class="yang1">
+  <img src="img/2-1 - Salin.png" alt="logo" class="yang3">
+  <img src="img/0 - Salin.png" alt="logo" class="yang2">
+  <img src="img/1 - Salin.png" alt="logo" class="yang1">
+  <img src="img/1 (2) - Salin.png" alt="logo" class="yang">
+  <img src="img/01 - Salin.png" alt="logo" class="yang4">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 text-center">
@@ -124,7 +132,7 @@
             <p href="https://www.instagram.com/diaaraa__/" target="_blank" class="btn">@diaara__</p>
           </div>
           <div class="col-4">
-            <img src="img/symphony1.png" alt="HalriAnsyar" class="img-responsive rounded-circle">
+            <img src="img/images.png" alt="HalriAnsyar" class="img-responsive rounded-circle">
           </div>
         </div>
       </div>
