--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
     
     
-    <nav class="navbar navbar-expand bg-transparent sticky-top mynavbar">
+    <nav class="navbar navbar-expand sticky-top mynavbar">
       <div class="container">
         <a class="navbar-brand" href="#">The Wedding</a>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -98,21 +98,22 @@
     </nav>
 
 <section id="home" class="home">
-  <img src="img/2.png" alt="logo" class="goyang1">
-  <img src="img/2-1.png" alt="logo" class="goyang3">
-  <img src="img/01.png" alt="logo" class="goyang4">
-  <img src="img/1.png" alt="logo" class="goyang1">
-  <img src="img/1 (2).png" alt="logo" class="goyang">
-  <img src="img/2-2.png" alt="logo" class="goyang5">
-  <img src="img/0.png" alt="logo" class="goyang2">
-  
-  <img src="img/2-2 - Salin.png" alt="logo" class="yang5">
-  <img src="img/2 - Salin.png" alt="logo" class="yang1">
-  <img src="img/2-1 - Salin.png" alt="logo" class="yang3">
-  <img src="img/0 - Salin.png" alt="logo" class="yang2">
-  <img src="img/1 - Salin.png" alt="logo" class="yang1">
-  <img src="img/1 (2) - Salin.png" alt="logo" class="yang">
-  <img src="img/01 - Salin.png" alt="logo" class="yang4">
+  <div class="bunga">
+    <img src="img/2.png" alt="logo" class="goyang1">
+    <img src="img/2-1.png" alt="logo" class="goyang3">
+    <img src="img/01.png" alt="logo" class="goyang4">
+    <img src="img/1.png" alt="logo" class="goyang1">
+    <img src="img/1 (2).png" alt="logo" class="goyang">
+    <img src="img/2-2.png" alt="logo" class="goyang5">
+    <img src="img/0.png" alt="logo" class="goyang2">
+    <img src="img/2-2 - Salin.png" alt="logo" class="yang5">
+    <img src="img/2 - Salin.png" alt="logo" class="yang1">
+    <img src="img/2-1 - Salin.png" alt="logo" class="yang3">
+    <img src="img/0 - Salin.png" alt="logo" class="yang2">
+    <img src="img/1 - Salin.png" alt="logo" class="yang1">
+    <img src="img/1 (2) - Salin.png" alt="logo" class="yang">
+    <img src="img/01 - Salin.png" alt="logo" class="yang4">
+  </div>
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 text-center">
