--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
           </div>
           <div class="offcanvas-body">
             <div class="navbar-nav ms-auto">
-              <a class="nav-link" href="#home">Home</a>
-              <a class="nav-link" href="#info">Info</a>
-              <a class="nav-link" href="#rsvp">RSVP</a>
             </div>
           </form>
         </div>
@@ -106,13 +103,15 @@
     <img src="img/1 (2).png" alt="logo" class="goyang">
     <img src="img/2-2.png" alt="logo" class="goyang5">
     <img src="img/0.png" alt="logo" class="goyang2">
-    <img src="img/2-2 - Salin.png" alt="logo" class="yang5">
     <img src="img/2 - Salin.png" alt="logo" class="yang1">
     <img src="img/2-1 - Salin.png" alt="logo" class="yang3">
-    <img src="img/0 - Salin.png" alt="logo" class="yang2">
+    <img src="img/01 - Salin.png" alt="logo" class="yang4">
     <img src="img/1 - Salin.png" alt="logo" class="yang1">
     <img src="img/1 (2) - Salin.png" alt="logo" class="yang">
-    <img src="img/01 - Salin.png" alt="logo" class="yang4">
+    <img src="img/2-2 - Salin.png" alt="logo" class="yang5">
+    <img src="img/0 - Salin.png" alt="logo" class="yang2">
+    <img src="img/2 info - Salin.png" alt="logo" class="samping1">
+    <img src="img/009.png" alt="logo" class="samping2">
   </div>
   <div class="container">
     <div class="row justify-content-center">
@@ -130,10 +129,10 @@
           <div class="col-8 text-end">
             <h3>Diah Ramayanti, S.Pd</h3>
             <p style="margin-top: -30px;">Putra dari Bpk. Mulyadi <br> & <br> Ibu Halima</p>
-            <p href="https://www.instagram.com/diaaraa__/" target="_blank" class="btn">@diaara__</p>
+            <a href="https://www.instagram.com/diaaraa__/" target="_blank" class="btn btn">@diaara__</a>
           </div>
           <div class="col-4">
-            <img src="img/images.png" alt="HalriAnsyar" class="img-responsive rounded-circle">
+            <img src="img/images.png" alt="HalriAnsyar" class="img-responsive rounded-circle" style="margin-bottom: 6rem;">
           </div>
         </div>
       </div>
@@ -146,7 +145,7 @@
           <div class="col-8">
             <h3>Halriansyar. M.A</h3>
             <p style="margin-top: -30px;">Putra dari Bpk. Muhammad Ali <br> & <br> Ibu Haspah</p>
-            <p href="https://www.instagram.com/harliansyar_/" target="_blank" class="btn">@harliansyar_</p>
+            <a href="https://www.instagram.com/harliansyar_/" target="_blank" class="btn btn my-3">@harliansyar_</a>
           </div>
         </div>
       </div>
@@ -154,7 +153,43 @@
   </div>
 </section>
 
+<nav class="navbar navbar-expand sticky-top mynavbar">
+  <div class="container">
+    <a class="navbar-brand" href="#">The Wedding</a>
+    <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">The Wedding</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <div class="navbar-nav ms-auto">
+        </div>
+      </form>
+    </div>
+    </div>
+  </div>
+</nav>
+
 <section id="info" class="info">
+  <img src="img/2 info.png" alt="logo" class="goyang1">
+  <img src="img/2-1 info.png" alt="logo" class="goyang3">
+  <img src="img/01 info.png" alt="logo" class="goyang4">
+  <img src="img/1 info.png" alt="logo" class="goyang1">
+  <img src="img/1 (2) info.png" alt="logo" class="goyang">
+  <img src="img/2-2 info.png" alt="logo" class="goyang5">
+  <img src="img/0 info.png" alt="logo" class="goyang2">
+  <img src="img/2 - Salin - Salin.png" alt="logo" class="yang1">
+  <img src="img/2-1 - Salin - Salin.png" alt="logo" class="yang3">
+  <img src="img/01 - Salin - Salin.png" alt="logo" class="yang4">
+  <img src="img/1 - Salin - Salin.png" alt="logo" class="yang1">
+  <img src="img/1 (2) - Salin - Salin.png" alt="logo" class="yang">
+  <img src="img/2-2 - Salin - Salin.png" alt="logo" class="yang5">
+  <img src="img/0 - Salin - Salin.png" alt="logo" class="yang2">
+  <img src="img/2 info - Salin - Salin.png" alt="logo" class="samping1">
+  <img src="img/009 - Salin.png" alt="logo" class="samping2">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 col-10 text-center">
@@ -176,7 +211,6 @@
             <span>Minggu, 5 Mei 2024</span>
           </div>
         </div>
-        
       </div>
     </div>
   </div>
@@ -192,54 +226,33 @@
           <div class="col-md-6">
             <span>Minggu, 5 Mei 2024</span>
           </div>
-        </div>
-        
+        </div>   
       </div>
     </div>
   </div>
 </div>
-
   </div>
 </section>
 
-<section id="rsvp" class="rsvp">
+<nav class="navbar navbar-expand sticky-top mynavbar">
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-8 col-10 text-center" style="margin-top: 9rem;">
-        <h2>Konfirmasi Kehadiran</h2>
-        <p>Isi form untuk konfirmasi kehadiran</p>
+    <a class="navbar-brand" href="#">The Wedding</a>
+    <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">The Wedding</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
+      <div class="offcanvas-body">
+        <div class="navbar-nav ms-auto">
+        </div>
+      </form>
     </div>
-    <form class="row row-cols-lg-auto g-3 align-items-center justify-content-center">
-      <div class="col-12" style="margin-top: 5rem;">
-        <div class="mb-3">
-          <label for="Nama" class="form-label" >Nama</label>
-          <input type="text" class="form-control" id="nama" name="nama">
-        </div>
-      </div>
-      <div class="col-12" style="margin-top: 5rem;">
-        <div class="mb-3">
-          <label for="status" class="form-label" >Konfirmasi</label>
-          <select name="status" id="status" class="form-select">
-            <option selected>-</option>
-            <option value="1">Hadir</option>
-            <option value="0">Tidak hadir</option>
-          </select>
-        </div>
-      </div>
-      <div class="col-12" style="margin-top: 118px;">
-        <button class="=btn btn-primary">Kirim</button>
-      </div>
-  </div>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-8 col-9 text-center" style="margin-top: 5rem;"> 
-        <h2>Terimakasih</h2>
-        <p>Ditunggu kehadirannya</p>
-      </div>
     </div>
   </div>
-</section>
+</nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
