--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 text-center">
-        <h2>Acara Pernikahan</h2>
+        <h2 class="animate__animated animate__slideInDown">Acara Pernikahan</h2>
         <h3>Diselenggarakan pada 5 Mei 2024 di Palu, Sulawesi Tengah</h3>
         <h4>بِسْــــــــــــــــــمِ اللهِ الرَّحْمَنِ الرَّحِيْمِ</h4>
         <p>Merupakan suatu kehormatan bagi kami apabila Bapak/Ibu/Saudara/i berkenan hadir untuk memberikan doa restu kapada kedua mempelai</p>
@@ -172,6 +172,7 @@
     </div>
   </div>
 </nav>
+
 
 <section id="info" class="info">
   <img src="img/2 info.png" alt="logo" class="goyang1">
