--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animation.css">
+    <link rel="stylesheet" href="animationset.css">
   </head>
+  
 
 <!-- animateStyle -->
 <head>
@@ -138,18 +141,14 @@
     </nav>
 
 <section id="home" class="home">
-  <div class="waves semua">
-    <div class="wave" id="wave1"></div>
-    <div class="wave" id="wave2"></div>
-    <div class="wave" id="wave3"></div>
-    <div class="wave" id="wave4"></div>
-  </div>
-  <div class="waves1 semua">
-    <div class="wave" id="wave1"></div>
-    <div class="wave" id="wave2"></div>
-    <div class="wave" id="wave3"></div>
-    <div class="wave" id="wave4"></div>
-  </div>
+  <div class="wave semua" id="wave1"></div>
+  <div class="wave semua" id="wave2"></div>
+  <div class="wave semua" id="wave3"></div>
+  <div class="wave semua" id="wave4"></div>
+  <div class="wave1 semua" id="wave1"></div>
+  <div class="wave1 semua" id="wave2"></div>
+  <div class="wave1 semua" id="wave3"></div>
+  <div class="wave1 semua" id="wave4"></div>   
   <div class="bunga">
     <img src="img/2.png" alt="logo" class="goyang1">
     <img src="img/2-1.png" alt="logo" class="goyang3">
@@ -217,18 +216,14 @@
 
 
 <section id="info" class="info">
-  <div class="waves semua">
-    <div class="wave" id="wave1"></div>
-    <div class="wave" id="wave2"></div>
-    <div class="wave" id="wave3"></div>
-    <div class="wave" id="wave4"></div>
-  </div>
-  <div class="waves1 semua">
-    <div class="wave" id="wave1"></div>
-    <div class="wave" id="wave2"></div>
-    <div class="wave" id="wave3"></div>
-    <div class="wave" id="wave4"></div>
-  </div>
+  <div class="wave semua" id="wave1"></div>
+  <div class="wave semua" id="wave2"></div>
+  <div class="wave semua" id="wave3"></div>
+  <div class="wave semua" id="wave4"></div>
+  <div class="wave1 semua" id="wave1"></div>
+  <div class="wave1 semua" id="wave2"></div>
+  <div class="wave1 semua" id="wave3"></div>
+  <div class="wave1 semua" id="wave4"></div>  
   <div class="bunga">
     <img src="img/2 info.png" alt="logo" class="goyang1">
     <img src="img/2-1 info.png" alt="logo" class="goyang3">
