--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     */
     (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
-    s.src = 'https://diahwedding.disqus.com/embed.js';
+    s.src = 'https://diah-wedding.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
     })();
