--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
     </section>
     
     
-    <nav class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
+    <section class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
       <a class="navbar-brand text-center">"Dan segala sesuatu Kami ciptakan berpasang-pasangan<br>
       agar kamu mengingat (kebesaran Allah)." (QS. Az Zariyat: 49).</a>
-    </nav>
+    </section>
 
     <nav class="navbar navbar-expand bg-transparent sticky-top mynavbar1">
       <div class="set sticky-top">
@@ -185,8 +185,10 @@
         <div class="row">
           <div class="col-8 text-end diah">
             <h3>Diah Ramayanti, S.Pd</h3>
-            <p style="margin-top: -30px;">Putra dari Bpk. Mulyadi <br> & <br> Ibu Halima</p>
-            <a href="https://www.instagram.com/diaaraa__/" target="_blank" class="btn btn">@diaara__</a>
+            <p style="margin-top: -30px;">Putri Pertama dari Bpk. Mulyadi <br> & <br> Ibu Halima</p>
+            <a href="https://www.instagram.com/diaaraa__/" target="_blank" class="btn btn">
+              <p>@diaaraa__</p>
+            </a>
           </div>
           <div class="col-4">
             <img src="img/images.png" alt="HalriAnsyar" class="img-responsive rounded-circle" style="margin-bottom: 6rem;">
@@ -200,9 +202,11 @@
             <img src="img/images.png" alt="Diah Ramayanti" class="img-responsive rounded-circle">
           </div>
           <div class="col-8 ansar">
-            <h3>Halriansyar. M.A</h3>
-            <p style="margin-top: -30px;">Putra dari Bpk. Muhammad Ali <br> & <br> Ibu Haspah</p>
-            <a href="https://www.instagram.com/harliansyar_/" target="_blank" class="btn btn my-3">@harliansyar_</a>
+            <h3>Harliansyar. M.A</h3>
+            <p style="margin-top: -30px;">Putra KeDua dari Bpk. Muhammad Ali <br> & <br> Ibu Haspah</p>
+            <a href="https://www.instagram.com/harliansyar_/" target="_blank" class="btn btn my-3">
+              <p>@harliansyar_</p>
+            </a>
           </div>
         </div>
       </div>
@@ -210,10 +214,8 @@
   </div>
 </section>
 
-<nav class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
-  <a class="navbar-brand text-center">"Nikah adalah sunnahku (tuntunanku). Maka barang siapa yang tidak suka<br>
-  dengan sunnahku (itu) bukanlah dia dari golonganku". (HR. Ibnu Majah).</a>
-</nav>
+<section style="height: 5rem;" class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
+</section>
 
 
 <section id="info" class="info">
@@ -250,7 +252,7 @@
       <div class="col-md-8 col-10 text-center">
         <h2 class="judul">Informasi Acara</h2>
         <p class="alamat isi">Alamat: Gedung Almuhsinin Alkhairaat. <br> Jl. Sis Al Jufri, Siranindi, Kec. Palu Barat, Kota Palu</p>
-        <button class="isi" onclick="location.href='https://maps.app.goo.gl/4LJ39JfbivMiJzbs8'">PETA
+        <button class="isi" onclick="location.href='https://maps.app.goo.gl/4LJ39JfbivMiJzbs8'"><h1 style="color: #F3E9A8;">PETA</h1>
           <div class="star-1">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="25" height="25">
           <path fill="#00aeff" d="M427.313,88.686c-47.803-47.803-125.213-47.803-173.016,0l-17.087,17.087l-17.087-17.087
@@ -317,9 +319,9 @@
       <div class="profile-pic"></div>
       <div class="bottom">
         <div class="content">
-          <span class="name text-center">Dilaksanakan</span>
+          <span class="name text-center" style="color: #F3E9A8;">5<br>MEI</span>
           <span class="about-me text-center"
-            >05 MEI 2024<br>09.00 - Sampai Selesai</br>
+            >09.00 - Selesai</br>
           </span>
         </div>
         <div class="bottom-bottom">
@@ -338,9 +340,9 @@
           <div class="profile-pic"></div>
           <div class="bottom">
             <div class="content">
-              <span class="name text-center">Dilaksanakan</span>
+              <span class="name text-center" style="color: #F3E9A8;">5<br>MEI</span>
               <span class="about-me text-center"
-                >05 MEI 2024<br>11.00 - Sampai Selesai</br>
+                >11.00 - Selesai</br>
               </span>
             </div>
             <div class="bottom-bottom">
@@ -354,10 +356,10 @@
 
 </section>
 
-<nav class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
+<section class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
   <a class="navbar-brand text-center">"Dari Ibnu Abbas RA, Rasulullah SAW bersabda:<br>
   "Carilah rezeki dengan menikah." (HR Ad-Dailami).</a>
-</nav>
+</section>
 
 <section class="komen">
   <div class="wave semua" id="wave1"></div>
@@ -390,8 +392,8 @@
     <img src="img/009.png" alt="logo" class="samping2">
   <div class="card justify-content-center mt-5 komen">
     <h1 class="text-center">Ucapan & Doa</h1>
-    <div class="col-md-6">
-      <div id="disqus_thread"></div>
+    <div>
+      <div id="disqus_thread" style="background-color: transparent; border:2px dashed whitesmoke; border-radius: 2%;"></div>
 <script>
     /**
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -415,7 +417,7 @@
 </section>
 
 <nav class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
-  <a class="navbar-brand1 text-center">Terima Kasih</a>
+  <a id="ini" class="navbar-brand1 text-center">Terima Kasih</a>
 </nav>
 
 <audio id="song" autoplay loop>
