--- a/index.html
+++ b/index.html
@@ -389,7 +389,11 @@
     <img src="img/009.png" alt="logo" class="samping2">
   <div class="card justify-content-center mt-5 komen">
     <h1 class="text-center">Ucapan & Doa</h1>
-    <script defer src="https://cdn.commento.io/js/commento.js"></script>
+    <script defer
+  src="http://commento.example.com/js/commento.js"
+  data-css-override="http://example.com/my-custom-styling.css"
+  data-auto-init="true">
+</script>
 <div id="commento"></div>
   </div>
 </section>
