--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1 class="mb-5 text-end animate__animated animate__slideInRight">Harli</h1>
             <p class="animate__animated animate__zoomIn">BEGIN</p>
             <div class="simply-countdown animate__animated animate__zoomIn"></div>
-            <button onclick="enableScroll ()">BUKA
+            <button onclick="enableScroll (), window.commento.main()">BUKA
               <div class="star-1">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="25" height="25">
               <path fill="#00aeff" d="M427.313,88.686c-47.803-47.803-125.213-47.803-173.016,0l-17.087,17.087l-17.087-17.087
