--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1 class="mb-5 text-end animate__animated animate__slideInRight">Harli</h1>
             <p class="animate__animated animate__zoomIn">BEGIN</p>
             <div class="simply-countdown animate__animated animate__zoomIn"></div>
-            <button onclick="enableScroll (), window.commento.main()">BUKA
+            <button onclick="enableScroll ()">BUKA
               <div class="star-1">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="25" height="25">
               <path fill="#00aeff" d="M427.313,88.686c-47.803-47.803-125.213-47.803-173.016,0l-17.087,17.087l-17.087-17.087
@@ -389,11 +389,7 @@
     <img src="img/009.png" alt="logo" class="samping2">
   <div class="card justify-content-center mt-5 komen">
     <h1 class="text-center">Ucapan & Doa</h1>
-    <script defer
-  src="http://commento.example.com/js/commento.js"
-  data-css-override="http://example.com/my-custom-styling.css"
-  data-auto-init="true">
-</script>
+    <script defer src="https://cdn.commento.io/js/commento.js"></script>
 <div id="commento"></div>
   </div>
 </section>
