--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
     <section style="height: 5rem;" class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
     </section>
 
+
+    <nav class="navbar fixed-top">
+      <div class="container">
+        <a onclick="playAudio()" style="right: 16px;top: 16px;position: absolute;" class="navbar-toggler">
+          <span class="navbar-toggler-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+            <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445"/>
+          </svg></span>
+        </a>
+      </div>
+    </nav>
+
     <nav class="navbar navbar-expand bg-transparent sticky-top mynavbar1">
       <div class="set sticky-top">
         <div><img src="img/daun1.png"></div>
@@ -343,7 +355,10 @@
 </section>
 
 <section id="rum" style="height: 200px;" class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
-  <div class="tabe"><h1 style="text-align: center; font-size: 1.8rem; margin: 10px;">"Di antara tanda-tanda (kebesaran)-Nya ialah bahwa Dia menciptakan pasangan-pasangan untukmu dari (jenis) dirimu sendiri agar kamu merasa tenteram kepadanya. Dia menjadikan di antaramu rasa cinta dan kasih sayang. Sesungguhnya pada yang demikian itu benar-benar terdapat tanda-tanda (kebesaran Allah) bagi kaum yang berpikir."</h1></div>
+  <div class="tabe"><h1 style="text-align: center; font-size: 1.8rem; margin: 10px;">"Di antara tanda-tanda (kebesaran)-Nya ialah bahwa Dia menciptakan pasangan-pasangan untukmu dari (jenis) dirimu sendiri agar kamu merasa tenteram kepadanya. Dia menjadikan di antaramu rasa cinta dan kasih sayang. Sesungguhnya pada yang demikian itu benar-benar terdapat tanda-tanda (kebesaran Allah) bagi kaum yang berpikir."
+    <br><button class="btn mengaj" id="close" style="margin: 5px;" onclick="pauseAudio(),playAudio1()"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-play-circle-fill" viewBox="0 0 16 16">
+      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814z"/>
+    </svg></button><br>Surat Ar Rum ayat 21</h1></div>
 </section>
 
 <section class="komen">
@@ -384,28 +399,6 @@
         </div>
       </div>
     </div>
-   <div class="komenpas"> <h1 id="doa" class="text-center judul">Ucapan & Doa</h1>
-    <p class="isi">Doa Restu Anda merupakan karunia yang sangat berarti bagi kami. Berikan ucapan terbaik anda untuk kedua pembelai
-    </p>
-    <button class="isi lop" id="KirimBtn">
-      <div class="svg-wrapper-1">
-        <div class="svg-wrapper">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            width="24"
-            height="24"
-          >
-            <path fill="none" d="M0 0h24v24H0z"></path>
-            <path
-              fill="currentColor"
-              d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z"
-            ></path>
-          </svg>
-        </div>
-      </div>
-      <span>Kirim Ucapan</span>
-    </button></div>
     <div class="popup-outer1">
       <div class="popup-box1">
         <i id="close" class="bx bx-x close">X</i>
@@ -431,30 +424,55 @@
         </div>
       </div>
     </div>
-    <h1 class="text-center judul">Wedding Gift</h1>
-    <p class="isi" >Tanpa mengurangi rasa hormat,<br>bagi anda yang ingin memberikan tanda kasih untuk mempelai, dapat melalui virtual acount dan e-wallet.
-    </p>
-    <button style="margin-bottom: 20%;" class="isi lop" id="irimBtn">
-      <div class="svg-wrapper-1">
-        <div class="svg-wrapper">
-          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cash" viewBox="0 0 16 16">
-            <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
-            <path d="M0 4a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1zm3 0a2 2 0 0 1-2 2v4a2 2 0 0 1 2 2h10a2 2 0 0 1 2-2V6a2 2 0 0 1-2-2z"/>
-          </svg>
-        </div>
+<div class="pengisi">    <h1 id="doa" class="text-center judul">Ucapan & Doa</h1>
+  <p class="isi">Doa Restu Anda merupakan karunia yang sangat berarti bagi kami. Berikan ucapan terbaik anda untuk kedua pembelai
+  </p>
+  <button class="isi lop" id="KirimBtn">
+    <div class="svg-wrapper-1">
+      <div class="svg-wrapper">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          width="24"
+          height="24"
+        >
+          <path fill="none" d="M0 0h24v24H0z"></path>
+          <path
+            fill="currentColor"
+            d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z"
+          ></path>
+        </svg>
       </div>
-      <span>Kirim Hadiah</span>
-    </button>
+    </div>
+    <span>Kirim Ucapan</span>
+  </button>
+  <h1 class="text-center judul">Wedding Gift</h1>
+  <p class="isi" >Tanpa mengurangi rasa hormat,<br>bagi anda yang ingin memberikan tanda kasih untuk mempelai, dapat melalui virtual acount dan e-wallet.
+  </p>
+  <button style="margin-bottom: 20%;" class="isi lop" id="irimBtn">
+    <div class="svg-wrapper-1">
+      <div class="svg-wrapper">
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cash" viewBox="0 0 16 16">
+          <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
+          <path d="M0 4a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1zm3 0a2 2 0 0 1-2 2v4a2 2 0 0 1 2 2h10a2 2 0 0 1 2-2V6a2 2 0 0 1-2-2z"/>
+        </svg>
+      </div>
+    </div>
+    <span>Kirim Hadiah</span>
+  </button>
+  <p>Merupakan suatu kebahagiaan bila Anda bisa hadir dan merayakan hari bahagia ini bersama kami.</p></div>
 </section>
 
 <nav class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
-  <a id="ini" class="navbar-brand1 text-center">Terima Kasih</a>
+  <p id="ini" class="navbar-brand1 text-center">Terima Kasih</p>
 </nav>
 
-<audio id="song" autoplay loop>
+<audio id="song" loop>
   <source src="lagu/lagu.mp3" type="audio/mp3">
 </audio>
-
+<audio id="mengaji">
+  <source src="lagu/E5VeFCHlq7I_139.mp3" type="audio/mp3">
+</audio>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
       simplyCountdown('.simply-countdown', {
@@ -472,6 +490,17 @@
             }
       })
     </script>
+
+<script>
+    function playAudio1() {
+    const song = document.querySelector('#mengaji')
+    song.play();
+    }
+    function pauseAudio() {
+      const song = document.querySelector('#song')
+      song.pause();
+      }
+</script>
 
 <script>
   function Copy(text) {
@@ -506,16 +535,22 @@
   function playAudio() {
     const song = document.querySelector('#song')
     song.play();
+    const section1 = document.querySelector ("body")
+    section1.classList.remove("show3")
   }
 
   disableScroll ();
 </script>
 
+
+
 <script>
+  const section1 = document.querySelector ("body")
   const section = document.querySelector (".komen"),
         KirimBtn = section.querySelector ("#KirimBtn");
         closeBtn = section.querySelectorAll("#close");
         IrimBtn = section.querySelector ("#irimBtn");
+        bukaBtn = section1.querySelector (".mengaj");
 
         KirimBtn.addEventListener("click" , () => {
           section.classList.add("show")
@@ -530,6 +565,10 @@
 
         IrimBtn.addEventListener("click" , () => {
           section.classList.add("show2")
+        });
+
+        bukaBtn.addEventListener("click" , () => {
+          section1.classList.add("show3")
         });
 </script>
 
