--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
           </button>        
       </main>
   </section>
-    <section style="height: 10rem;" class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
-      <p id="ini" class="navbar-brand1 text-center">Hari Yang Ditunggu</p>
+    <section style="height: 5rem;" class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
+      <p id="ini" class="navbar-brand1 text-center"></p>
     </section>
 
     <nav class="navbar fixed-top">
@@ -213,7 +213,7 @@
 </section>
 
 <section style="height: 10rem;" class="navbar sticky-top text-center justify-content-center flex-grow-0 mynavbar semua">
-  <p id="ini" class="navbar-brand1 text-center">Hari Kebahagian Kami</p>
+  <div class="tabe"><h1 style="text-align: center; font-size: 1.8rem; margin: 10px;">"Dan segala sesuatu Kami ciptakan berpasang-pasangan agar kamu mengingat (kebesaran Allah)."<br>Surah Az Zariyat Ayat 49</h1></div> 
 </section>
 
 
@@ -575,7 +575,7 @@
 <script>
   ScrollReveal({ 
     reset: false,
-    duration: 1500,
+    duration: 1000,
     distance: '350px'
   });
     
@@ -590,7 +590,7 @@
     ScrollReveal().reveal('.samping2', { duration:2500, delay: 250, origin: 'left' });
     ScrollReveal().reveal('.isi', { delay: 50 });
     ScrollReveal().reveal('.diah', { delay: 50, origin:'left' });
-    ScrollReveal().reveal('.ansar', {origin:'right' });
+    ScrollReveal().reveal('.ansar', { delay:50, origin:'right' });
     
 </script>
 
