--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         <i id="close" class="bx bx-x close">X</i>
         <div class="comen" style="overflow: hidden;">
           <script defer src="https://cdn.commento.io/js/commento.js"></script>
-          <div id="commento"></div>
+          <div style="overflow: hidden;" id="commento"></div>
         </div>
       </div>
     </div>
