--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
 
   <head>
-    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
     <meta property="twitter:title" content="Diah & Ansar Wedding" />
     <meta property="twitter:description" content="Minggu, 05 Mei 2024" />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="twitter:image" content="https://get.pxhere.com/photo/people-ring-number-summer-love-young-holiday-romance-two-blue-wedding-bride-marriage-just-married-engagement-circle-close-up-family-future-happiness-relationship-altar-bright-beauty-joy-rings-shape-macro-photography-sweethearts-the-groom-fata-rite-blue-background-computer-wallpaper-1220831.jpg" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Diah & Ansar Wedding</title>
@@ -205,7 +203,7 @@
             <img src="img/images.png" alt="Diah Ramayanti" class="img-responsive rounded-circle">
           </div>
           <div class="col-8 ansar">
-            <h3>Harliansyar. M.A</h3>
+            <h3 style="margin-top: 2rem;">Harliansyar. M.A</h3>
             <p style="margin-top: -30px;">Anak Kedua dari Bpk. Muhammad Ali <br> & <br> Ibu Haspah</p>
             <a href="https://www.instagram.com/harliansyar_/" target="_blank" class="btn btn my-3">
               <p>@harliansyar_</p>
