--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="Diah & Ansar Wedding" />
     <meta property="twitter:description" content="Minggu, 05 Mei 2024" />
-    <meta property="twitter:image" content="https://get.pxhere.com/photo/people-ring-number-summer-love-young-holiday-romance-two-blue-wedding-bride-marriage-just-married-engagement-circle-close-up-family-future-happiness-relationship-altar-bright-beauty-joy-rings-shape-macro-photography-sweethearts-the-groom-fata-rite-blue-background-computer-wallpaper-1220831.jpg" />
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/ArilT/diah-wedding/images/wedding-1361076_1920.jpg" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Diah & Ansar Wedding</title>
