--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="Diah & Ansar Wedding" />
     <meta property="twitter:description" content="Minggu, 05 Mei 2024" />
-    <meta property="twitter:image" content="https://arilt.github.io/diah-wedding/" />
+    <meta property="twitter:image" content="https://arilt.github.io/diah-wedding/img/wedding-1361076_1920.jpg" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Diah & Ansar Wedding</title>
