--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <meta property="og:title" content="Diah & Harli Wedding" />
 <meta property="og:description" content="Minggu, 05 Mei 2024" />
 <meta property="og:image" content="https://arilt.github.io/diah-wedding/img/wedding-1361076_1920.jpg" />
+<meta name="og:image" content="https://arilt.github.io/diah-wedding/img/wedding-1361076_1920.jpg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
@@ -20,6 +21,7 @@
 <meta property="twitter:title" content="Diah & Harli Wedding" />
 <meta property="twitter:description" content="Minggu, 05 Mei 2024" />
 <meta property="twitter:image" content="https://arilt.github.io/diah-wedding/img/wedding-1361076_1920.jpg" />
+<meta name="twitter:image" content="https://arilt.github.io/diah-wedding/img/wedding-1361076_1920.jpg" />
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
