--- a/index.html
+++ b/index.html
@@ -2,27 +2,11 @@
 <html lang="en">
 
   <head>
-    <!-- Primary Meta Tags -->
-<title>Diah & Harli Wedding</title>
-<meta name="title" content="Diah & Harli Wedding" />
-<meta name="description" content="Minggu, 05 Mei 2024" />
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://arilt.github.io/diah-wedding/" />
-<meta property="og:title" content="Diah & Harli Wedding" />
-<meta property="og:description" content="Minggu, 05 Mei 2024" />
-<meta property="og:image" content="https://arilt.github.io/diah-wedding/img/wedding-1361076_1920.jpg" />
-<meta name="og:image" content="https://arilt.github.io/diah-wedding/img/wedding-1361076_1920.jpg" />
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://arilt.github.io/diah-wedding/" />
 <meta property="twitter:title" content="Diah & Harli Wedding" />
 <meta property="twitter:description" content="Minggu, 05 Mei 2024" />
-<meta property="twitter:image" content="https://arilt.github.io/diah-wedding/img/wedding-1361076_1920.jpg" />
-<meta name="twitter:image" content="https://arilt.github.io/diah-wedding/img/wedding-1361076_1920.jpg" />
-
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Diah & Ansar Wedding</title>
