--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta property="twitter:url" content="https://arilt.github.io/diah-wedding/" />
 <meta property="twitter:title" content="Diah & Harli Wedding" />
 <meta property="twitter:description" content="Minggu, 05 Mei 2024" />
-<meta property="twitter:image" content="https://freeimage.host/i/JS9Aq7V" />
+<meta property="twitter:image" content="https://iili.io/JS9Aq7V.jpg" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Diah & Ansar Wedding</title>
