--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta property="twitter:url" content="https://arilt.github.io/diah-wedding/" />
 <meta property="twitter:title" content="Diah & Harli Wedding" />
 <meta property="twitter:description" content="Minggu, 05 Mei 2024" />
-<meta property="twitter:image" content="https://i.ibb.co/NNVJzPx/wedding-1361076-1920.jpg" />
+<meta property="twitter:image" content="https://i.postimg.cc/nV4mPHy5/IMG-20240421-WA0003.jpg" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Diah & Ansar Wedding</title>
