--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <h3 class="animate__animated animate__slideInDown">Kepada <span></span></h3>
           <p class="animate__animated animate__zoomIn">BEGIN</p>
           <div class="simply-countdown animate__animated animate__zoomIn"></div>
-          <button id="tomb" onclick="enableScroll ()">Buka
+          <button id="tomb" onclick="enableScroll (), location.href='#home'">Buka
             <div class="star-1">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="25" height="25">
             <path fill="#00aeff" d="M427.313,88.686c-47.803-47.803-125.213-47.803-173.016,0l-17.087,17.087l-17.087-17.087
