--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 
   <head>
-    <meta property="twitter:card" content="summary_large_image" />
+
+<meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://arilt.github.io/diah-wedding/" />
 <meta property="twitter:title" content="Diah & Harli Wedding" />
 <meta property="twitter:description" content="Minggu, 05 Mei 2024" />
 <meta property="twitter:image" content="https://i.postimg.cc/nV4mPHy5/IMG-20240421-WA0003.jpg" />
+<meta name="twitter:image" content="https://arilt.github.io/diah-wedding/img/wedding-1361076_1920.jpg" />
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Diah & Ansar Wedding</title>
@@ -33,7 +36,7 @@
   </head>
   
   <body>  
-    <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white animate_animated animate__slideInDown ">
+    <section id="hero" class="hero p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
       <main>
           <h4 class="animate__animated animate__slideInDown">THE</h4>
           <h5 class="animate__animated animate__slideInDown">WEDDING</h5>
@@ -43,7 +46,7 @@
           <h3 class="animate__animated animate__slideInDown">Kepada <span></span></h3>
           <p class="animate__animated animate__zoomIn">BEGIN</p>
           <div class="simply-countdown animate__animated animate__zoomIn"></div>
-          <button id="tomb" onclick="enableScroll (), location.href='#home'">Buka
+          <button id="tomb" onclick="enableScroll (),location.href='#home'">Buka
             <div class="star-1">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="25" height="25">
             <path fill="#00aeff" d="M427.313,88.686c-47.803-47.803-125.213-47.803-173.016,0l-17.087,17.087l-17.087-17.087
